Added links in navbar and started adding projects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>John Morgan</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
@@ -13,13 +13,20 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-dark">
-        <div class='text-white'>
-            <h1>John Morgan</h1>
-
+        <div class="container">
+            <div class='text-white'>
+                <h1>John Morgan</h1>
+            </div>
+            <div class="float-left">
+                <a href="https://github.com/johnmorgan2000"><button>Github</button></a>
+                <a href=""><button disabled>Resume</button></a>
+                <a href="https://www.linkedin.com/in/john-morgan-6a142516b/"><button>LinkedIn</button></a>
+            </div>
         </div>
     </nav>
     <div class="container">
         <div id="bio">
+            <h1>My Bio</h1>
             <p>
                 Hello there, my name is John Morgan and welcome to my portfolio. After, graduating with honors from Charleston High School
                 in 2018, I enrolled at Base Camp Coding Academy. The instructors here work vey hard to ensure that we have
@@ -28,7 +35,34 @@
                 more languages ,as well as, how to be a more professional worker to in order to be the most competent programmer
                 I can be.
             </p>
+        </div>
+        <div>
+            <h1>My Projects</h1>
+            <ul>
+                <li>
+                    <div>
+                        <h1>rental_store_johnmorgan</h1>
+                        <h2>A rental store project made using pyhton</h2>
+                        <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan">Go to</a>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <h1>Gladiators-Dictionaries</h1>
+                        <h2>A Gladiator game made in python using Dictionaries</h2>
+                        <a href="https://github.com/johnmorgan2000/Gladiators-Dictionaries">Go to</a>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <h1>Gladiators-Classes</h1>
+                        <h2>A Gladiator game made in python using Classes</h2>
+                        <a href="https://github.com/johnmorgan2000/Gladiators-Classes">Go to</a>
+                    </div>
+                </li>
 
+
+            </ul>
         </div>
     </div>
 
