Made python project and html project links

--- a/index.html
+++ b/index.html
@@ -36,33 +36,87 @@
                 I can be.
             </p>
         </div>
-        <div>
+        <div id="projects">
             <h1>My Projects</h1>
-            <ul>
+            <ul id="python">
+                <h1>Python</h1>
                 <li>
                     <div>
-                        <h1>rental_store_johnmorgan</h1>
-                        <h2>A rental store project made using pyhton</h2>
-                        <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan">Go to</a>
+                        <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan"><h1>rental_store_johnmorgan</h1></a>
+                        <h2>A rental store project made using python</h2>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <h1>Gladiators-Dictionaries</h1>
+                        <a href="https://github.com/johnmorgan2000/Gladiators-Dictionaries"><h1>Gladiators-Dictionaries</h1></a>
                         <h2>A Gladiator game made in python using Dictionaries</h2>
-                        <a href="https://github.com/johnmorgan2000/Gladiators-Dictionaries">Go to</a>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <h1>Gladiators-Classes</h1>
+                        <a href="https://github.com/johnmorgan2000/Gladiators-Classes"><h1>Gladiators-Dictionaries</h1></a>
                         <h2>A Gladiator game made in python using Classes</h2>
-                        <a href="https://github.com/johnmorgan2000/Gladiators-Classes">Go to</a>
                     </div>
                 </li>
-
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/blackjack"><h1>blackjack</h1></a>
+                        <h2>A school project to make a blackjack card game</h2>
+                    </div>
+                </li>
+            </ul>
+            <ul id="html">
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/bootstrap_forms"><h1>bootstrap_forms</h1></a>
+                        <h2>Practice making forms using bootstrap</h2>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/slack_features"><h1>slack_features</h1></a>
+                        <h2>Html and css practice making slack features</h2>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
+                        <h2>Html and css practice making a Pypi web component</h2>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
+                        <h2>Html and css practice making a Pypi web component</h2>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/rubygemsnavebar"><h1>rubygemsnavebar</h1></a>
+                        <h2>Html and css practice making a navigation bar from ruby gems</h2>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/devto_article"><h1>devto_article</h1></a>
+                        <h2>Html and css practice making a devto article</h2>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/devto_keylinks"><h1>devto_keylinks</h1></a>
+                        <h2>Html and css practice making a devto keylink</h2>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/devto_ELI5"><h1>devto_ELI5</h1></a>
+                        <h2>Practice making a Explain Like I'm 5 devto component</h2>
+                    </div>
+                </li>
 
             </ul>
+
         </div>
     </div>
 
