Finished adding the projects, and added an images folder

--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
                 I can be.
             </p>
         </div>
+        <div id="contact">
+            <h1>
+                Contact Me
+            </h1>
+            <ul>
+                You can reach me via:
+                <li>Phone: (662)-719-6000</li>
+                <li>Email: <a href="mailto:jmorgan@basecampcodingacademy.org">jmorgan@basecampcodingacademy.org</a></li>
+                <li>Email: <a href="mailto:morganjohnjr@icloud.com">morganjohnjr@icloud.com</a> </li>
+            </ul>
+
+        </div>
         <div id="projects">
             <h1>My Projects</h1>
             <ul id="python">
@@ -116,7 +128,33 @@
                 </li>
 
             </ul>
+            <ul id="javascript">
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter5"><h1>get_programming_node.js_chapter5</h1></a>
+                        <h2>Practice done in Get_programming with node.js chapter 5</h2>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter4"><h1>get_programming_node.js_chapter4</h1></a>
+                        <h2>Practice done in Get_programming with node.js chapter 4</h2>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/get_pragraming_node.js_chapter3"><h1>get_programming_node.js_chapter3</h1></a>
+                        <h2>Practice done in Get_programming with node.js chapter 3</h2>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <a href="https://github.com/johnmorgan2000/get_programing_node.js_chapter2"><h1>get_programming_node.js_chapter2</h1></a>
+                        <h2>Practice done in Get_programming with node.js chapter 2</h2>
+                    </div>
+                </li>
 
+            </ul>
         </div>
     </div>
 
