added primary and secondary colors and put my contact info into a card

--- a/index.html
+++ b/index.html
@@ -12,151 +12,161 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
             <div class='text-white'>
                 <h1>John Morgan</h1>
             </div>
             <div class="float-left">
-                <a href="https://github.com/johnmorgan2000"><button>Github</button></a>
-                <a href=""><button disabled>Resume</button></a>
-                <a href="https://www.linkedin.com/in/john-morgan-6a142516b/"><button>LinkedIn</button></a>
+                <a href="https://github.com/johnmorgan2000"><button class="py-1">Github</button></a>
+                <a href=""><button class='mx-2 py-1' disabled>Resume</button></a>
+                <a href="https://www.linkedin.com/in/john-morgan-6a142516b/"><button class="mt-1 py-1">LinkedIn</button></a>
             </div>
         </div>
     </nav>
     <div class="container">
-        <div id="bio">
-            <h1>My Bio</h1>
-            <p>
-                Hello there, my name is John Morgan and welcome to my portfolio. After, graduating with honors from Charleston High School
-                in 2018, I enrolled at Base Camp Coding Academy. The instructors here work vey hard to ensure that we have
-                all the necessary qualities and experience to get hired as developers. So far this year, I have learned to
-                write code in python, html, css, and javascript. By the time I finish this program, I expect to know many
-                more languages ,as well as, how to be a more professional worker to in order to be the most competent programmer
-                I can be.
-            </p>
-        </div>
-        <div id="contact">
-            <h1>
-                Contact Me
-            </h1>
-            <ul>
-                You can reach me via:
-                <li>Phone: (662)-719-6000</li>
-                <li>Email: <a href="mailto:jmorgan@basecampcodingacademy.org">jmorgan@basecampcodingacademy.org</a></li>
-                <li>Email: <a href="mailto:morganjohnjr@icloud.com">morganjohnjr@icloud.com</a> </li>
-            </ul>
+        <div class="row">
+            <div class="col-sm-12 col-lg-7 border rounded">
+                <div id="bio" class="">
+                    <h1 class="row justify-content-around">My Bio</h1>
+                    <p>
+                        Hello there, my name is John Morgan and welcome to my portfolio. After, graduating with honors from Charleston High School
+                        in 2018, I enrolled at Base Camp Coding Academy. The instructors here work vey hard to ensure that
+                        we have all the necessary qualities and experience to get hired as developers. So far this year,
+                        I have learned to write code in python, html, css, and javascript. By the time I finish this program,
+                        I expect to know many more languages ,as well as, how to be a more professional worker to in order
+                        to be the most competent programmer I can be.
+                    </p>
+                </div>
+            </div>
 
-        </div>
-        <div id="projects">
-            <h1>My Projects</h1>
-            <ul id="python">
-                <h1>Python</h1>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan"><h1>rental_store_johnmorgan</h1></a>
-                        <h2>A rental store project made using python</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/Gladiators-Dictionaries"><h1>Gladiators-Dictionaries</h1></a>
-                        <h2>A Gladiator game made in python using Dictionaries</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/Gladiators-Classes"><h1>Gladiators-Dictionaries</h1></a>
-                        <h2>A Gladiator game made in python using Classes</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/blackjack"><h1>blackjack</h1></a>
-                        <h2>A school project to make a blackjack card game</h2>
-                    </div>
-                </li>
-            </ul>
-            <ul id="html">
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/bootstrap_forms"><h1>bootstrap_forms</h1></a>
-                        <h2>Practice making forms using bootstrap</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/slack_features"><h1>slack_features</h1></a>
-                        <h2>Html and css practice making slack features</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
-                        <h2>Html and css practice making a Pypi web component</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
-                        <h2>Html and css practice making a Pypi web component</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/rubygemsnavebar"><h1>rubygemsnavebar</h1></a>
-                        <h2>Html and css practice making a navigation bar from ruby gems</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/devto_article"><h1>devto_article</h1></a>
-                        <h2>Html and css practice making a devto article</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/devto_keylinks"><h1>devto_keylinks</h1></a>
-                        <h2>Html and css practice making a devto keylink</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/devto_ELI5"><h1>devto_ELI5</h1></a>
-                        <h2>Practice making a Explain Like I'm 5 devto component</h2>
-                    </div>
-                </li>
-
-            </ul>
-            <ul id="javascript">
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter5"><h1>get_programming_node.js_chapter5</h1></a>
-                        <h2>Practice done in Get_programming with node.js chapter 5</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter4"><h1>get_programming_node.js_chapter4</h1></a>
-                        <h2>Practice done in Get_programming with node.js chapter 4</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/get_pragraming_node.js_chapter3"><h1>get_programming_node.js_chapter3</h1></a>
-                        <h2>Practice done in Get_programming with node.js chapter 3</h2>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="https://github.com/johnmorgan2000/get_programing_node.js_chapter2"><h1>get_programming_node.js_chapter2</h1></a>
-                        <h2>Practice done in Get_programming with node.js chapter 2</h2>
-                    </div>
-                </li>
-
-            </ul>
+            <div id="contact" class="card col-sm-12 col-lg-4">
+                <div class="row justify-content-around pt-2">
+                    <img id="photo" src="images/IMG_E1970.JPG" alt="" width="100px">
+                </div>
+                <div class="card-body p-0">
+                    <h1 class="card-title pl-1 row justify-content-around">
+                        Contact Me
+                    </h1>
+                    <ul class="list-group">
+                        <li class="list-group-item px-2">Phone: (662)-719-6000</li>
+                        <li class="list-group-item px-2">Email: <a href="mailto:jmorgan@basecampcodingacademy.org">jmorgan@basecampcodingacademy.org</a></li>
+                        <li class="list-group-item px-2">Email: <a href="mailto:morganjohnjr@icloud.com">morganjohnjr@icloud.com</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
+    <div id="projects">
+        <h1>My Projects</h1>
+        <ul id="python">
+            <h1>Python</h1>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan"><h1>rental_store_johnmorgan</h1></a>
+                    <h2>A rental store project made using python</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/Gladiators-Dictionaries"><h1>Gladiators-Dictionaries</h1></a>
+                    <h2>A Gladiator game made in python using Dictionaries</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/Gladiators-Classes"><h1>Gladiators-Dictionaries</h1></a>
+                    <h2>A Gladiator game made in python using Classes</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/blackjack"><h1>blackjack</h1></a>
+                    <h2>A school project to make a blackjack card game</h2>
+                </div>
+            </li>
+        </ul>
+        <ul id="html">
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/bootstrap_forms"><h1>bootstrap_forms</h1></a>
+                    <h2>Practice making forms using bootstrap</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/slack_features"><h1>slack_features</h1></a>
+                    <h2>Html and css practice making slack features</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
+                    <h2>Html and css practice making a Pypi web component</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
+                    <h2>Html and css practice making a Pypi web component</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/rubygemsnavebar"><h1>rubygemsnavebar</h1></a>
+                    <h2>Html and css practice making a navigation bar from ruby gems</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/devto_article"><h1>devto_article</h1></a>
+                    <h2>Html and css practice making a devto article</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/devto_keylinks"><h1>devto_keylinks</h1></a>
+                    <h2>Html and css practice making a devto keylink</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/devto_ELI5"><h1>devto_ELI5</h1></a>
+                    <h2>Practice making a Explain Like I'm 5 devto component</h2>
+                </div>
+            </li>
+
+        </ul>
+        <ul id="javascript">
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter5"><h1>get_programming_node.js_chapter5</h1></a>
+                    <h2>Practice done in Get_programming with node.js chapter 5</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter4"><h1>get_programming_node.js_chapter4</h1></a>
+                    <h2>Practice done in Get_programming with node.js chapter 4</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/get_pragraming_node.js_chapter3"><h1>get_programming_node.js_chapter3</h1></a>
+                    <h2>Practice done in Get_programming with node.js chapter 3</h2>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <a href="https://github.com/johnmorgan2000/get_programing_node.js_chapter2"><h1>get_programming_node.js_chapter2</h1></a>
+                    <h2>Practice done in Get_programming with node.js chapter 2</h2>
+                </div>
+            </li>
+
+        </ul>
+    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
