fixed and imporved upon the responsive design and added a background color

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
         crossorigin="anonymous">
 </head>
 
-<body>
+<body id="content">
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <div class='text-white'>
                 <h1>John Morgan</h1>
+
             </div>
             <div class="float-left">
                 <a href="https://github.com/johnmorgan2000"><button class="py-1">Github</button></a>
@@ -25,11 +26,11 @@
         </div>
     </nav>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-lg-7 border rounded">
-                <div id="bio" class="">
+        <div class="row justify-content-between">
+            <div class="col-sm-12 col-lg-7 border rounded mt-2 p-0">
+                <div id="bio" class="bg-white">
                     <h1 class="row justify-content-around">My Bio</h1>
-                    <p>
+                    <p class="m-0 p-2">
                         Hello there, my name is John Morgan and welcome to my portfolio. After, graduating with honors from Charleston High School
                         in 2018, I enrolled at Base Camp Coding Academy. The instructors here work vey hard to ensure that
                         we have all the necessary qualities and experience to get hired as developers. So far this year,
@@ -40,11 +41,11 @@
                 </div>
             </div>
 
-            <div id="contact" class="card col-sm-12 col-lg-4">
+            <div id="contact" class="card col-sm-12 col-lg-4 mt-2">
                 <div class="row justify-content-around pt-2">
                     <img id="photo" src="images/IMG_E1970.JPG" alt="" width="100px">
                 </div>
-                <div class="card-body p-0">
+                <div class="card-body p-0 pb-3">
                     <h1 class="card-title pl-1 row justify-content-around">
                         Contact Me
                     </h1>
@@ -57,114 +58,124 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div id="projects">
-        <h1>My Projects</h1>
-        <ul id="python">
-            <h1>Python</h1>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan"><h1>rental_store_johnmorgan</h1></a>
-                    <h2>A rental store project made using python</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/Gladiators-Dictionaries"><h1>Gladiators-Dictionaries</h1></a>
-                    <h2>A Gladiator game made in python using Dictionaries</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/Gladiators-Classes"><h1>Gladiators-Dictionaries</h1></a>
-                    <h2>A Gladiator game made in python using Classes</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/blackjack"><h1>blackjack</h1></a>
-                    <h2>A school project to make a blackjack card game</h2>
-                </div>
-            </li>
-        </ul>
-        <ul id="html">
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/bootstrap_forms"><h1>bootstrap_forms</h1></a>
-                    <h2>Practice making forms using bootstrap</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/slack_features"><h1>slack_features</h1></a>
-                    <h2>Html and css practice making slack features</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
-                    <h2>Html and css practice making a Pypi web component</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
-                    <h2>Html and css practice making a Pypi web component</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/rubygemsnavebar"><h1>rubygemsnavebar</h1></a>
-                    <h2>Html and css practice making a navigation bar from ruby gems</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/devto_article"><h1>devto_article</h1></a>
-                    <h2>Html and css practice making a devto article</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/devto_keylinks"><h1>devto_keylinks</h1></a>
-                    <h2>Html and css practice making a devto keylink</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/devto_ELI5"><h1>devto_ELI5</h1></a>
-                    <h2>Practice making a Explain Like I'm 5 devto component</h2>
-                </div>
-            </li>
 
-        </ul>
-        <ul id="javascript">
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter5"><h1>get_programming_node.js_chapter5</h1></a>
-                    <h2>Practice done in Get_programming with node.js chapter 5</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter4"><h1>get_programming_node.js_chapter4</h1></a>
-                    <h2>Practice done in Get_programming with node.js chapter 4</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/get_pragraming_node.js_chapter3"><h1>get_programming_node.js_chapter3</h1></a>
-                    <h2>Practice done in Get_programming with node.js chapter 3</h2>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <a href="https://github.com/johnmorgan2000/get_programing_node.js_chapter2"><h1>get_programming_node.js_chapter2</h1></a>
-                    <h2>Practice done in Get_programming with node.js chapter 2</h2>
-                </div>
-            </li>
+        <div id="projects" class="">
+            <div class="row justify-content-around">
+                <div class="border rounded col-sm-12 col-lg-8 mt-2 bg-white">
+                    <div>
+                        <h1>My Projects</h1>
+                    </div>
+                    <ul id="python">
+                        <h2>Python</h2>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan"><h1>rental_store_johnmorgan</h1></a>
+                                <p>A rental store project made using python</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/Gladiators-Dictionaries"><h1>Gladiators-Dictionaries</h1></a>
+                                <p>A Gladiator game made in python using Dictionaries</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/Gladiators-Classes"><h1>Gladiators-Dictionaries</h1></a>
+                                <p>A Gladiator game made in python using Classes</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/blackjack"><h1>blackjack</h1></a>
+                                <p>A school project to make a blackjack card game</p>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul id="html">
+                        <h2>HTML</h2>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/bootstrap_forms"><h1>bootstrap_forms</h1></a>
+                                <p>Practice making forms using bootstrap</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/slack_features"><h1>slack_features</h1></a>
+                                <p>Html and css practice making slack features</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
+                                <p>Html and css practice making a Pypi web component</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/pypi_projects"><h1>pypi_projects</h1></a>
+                                <p>Html and css practice making a Pypi web component</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/rubygemsnavebar"><h1>rubygemsnavebar</h1></a>
+                                <p>Html and css practice making a navigation bar from ruby gems</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/devto_article"><h1>devto_article</h1></a>
+                                <p>Html and css practice making a devto article</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/devto_keylinks"><h1>devto_keylinks</h1></a>
+                                <p>Html and css practice making a devto keylink</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/devto_ELI5"><h1>devto_ELI5</h1></a>
+                                <p>Practice making a Explain Like I'm 5 devto component</p>
+                            </div>
+                        </li>
 
-        </ul>
+                    </ul>
+                    <ul id="javascript">
+                        <h2>Javascript</h2>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter5"><h1>get_programming_node.js_chapter5</h1></a>
+                                <p>Practice done in Get_programming with node.js chapter 5</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter4"><h1>get_programming_node.js_chapter4</h1></a>
+                                <p>Practice done in Get_programming with node.js chapter 4</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/get_pragraming_node.js_chapter3"><h1>get_programming_node.js_chapter3</h1></a>
+                                <p>Practice done in Get_programming with node.js chapter 3</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/get_programing_node.js_chapter2"><h1>get_programming_node.js_chapter2</h1></a>
+                                <p>Practice done in Get_programming with node.js chapter 2</p>
+                            </div>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </div>
+        </div>
     </div>
 
 
