--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </nav>
     <div class="container">
         <div class="row justify-content-between">
-            <div class="col-sm-12 col-lg-7 border rounded mt-2 p-0">
-                <div id="bio" class="bg-white">
-                    <h1 class="row justify-content-around">My Bio</h1>
+            <div class="col-sm-12 col-lg-8 border rounded mt-2 p-0 bg-white">
+                <div id="bio" class="">
+                    <h1 class="block-header row justify-content-around">My Bio</h1>
                     <p class="m-0 p-2">
                         Hello there, my name is John Morgan and welcome to my portfolio. After, graduating with honors from Charleston High School
                         in 2018, I enrolled at Base Camp Coding Academy. The instructors here work vey hard to ensure that
@@ -41,16 +41,15 @@
                 </div>
             </div>
 
-            <div id="contact" class="card col-sm-12 col-lg-4 mt-2">
+            <div id="contact" class="card col-sm-12 col-lg-3 p-0  mt-2">
                 <div class="row justify-content-around pt-2">
                     <img id="photo" src="images/IMG_E1970.JPG" alt="" width="100px">
                 </div>
-                <div class="card-body p-0 pb-3">
-                    <h1 class="card-title pl-1 row justify-content-around">
+                <div class="card-body p-0">
+                    <h1 class="block-header card-title pl-1 row justify-content-around">
                         Contact Me
                     </h1>
                     <ul class="list-group">
-                        <li class="list-group-item px-2">Phone: (662)-719-6000</li>
                         <li class="list-group-item px-2">Email: <a href="mailto:jmorgan@basecampcodingacademy.org">jmorgan@basecampcodingacademy.org</a></li>
                         <li class="list-group-item px-2">Email: <a href="mailto:morganjohnjr@icloud.com">morganjohnjr@icloud.com</a>
                         </li>
@@ -60,13 +59,14 @@
         </div>
 
         <div id="projects" class="">
-            <div class="row justify-content-around">
+            <div class="row">
                 <div class="border rounded col-sm-12 col-lg-8 mt-2 bg-white">
                     <div>
-                        <h1>My Projects</h1>
+                        <h1 class="block-header row justify-content-around">My Projects</h1>
                     </div>
+
                     <ul id="python">
-                        <h2>Python</h2>
+                        <h2 class="language" d>Python</h2>
                         <li>
                             <div>
                                 <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan"><h1>rental_store_johnmorgan</h1></a>
@@ -93,7 +93,7 @@
                         </li>
                     </ul>
                     <ul id="html">
-                        <h2>HTML</h2>
+                        <h2 class="language" d>HTML</h2>
                         <li>
                             <div>
                                 <a href="https://github.com/johnmorgan2000/bootstrap_forms"><h1>bootstrap_forms</h1></a>
@@ -145,7 +145,7 @@
 
                     </ul>
                     <ul id="javascript">
-                        <h2>Javascript</h2>
+                        <h2 class="language" d>Javascript</h2>
                         <li>
                             <div>
                                 <a href="https://github.com/johnmorgan2000/get_programming_node.js_chapter5"><h1>get_programming_node.js_chapter5</h1></a>
@@ -172,6 +172,9 @@
                         </li>
 
                     </ul>
+
+                </div>
+                <div>
 
                 </div>
             </div>
