fixed the responsive design and improved upon the projects block

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         Contact Me
                     </h1>
                     <ul class="list-group">
-                        <li class="list-group-item px-2">Email: <a href="mailto:jmorgan@basecampcodingacademy.org">jmorgan@basecampcodingacademy.org</a></li>
-                        <li class="list-group-item px-2">Email: <a href="mailto:morganjohnjr@icloud.com">morganjohnjr@icloud.com</a>
+                        <li class="list-group-item px-2">School Email: <a href="mailto:jmorgan@basecampcodingacademy.org">jmorgan@basecampcodingacademy.org</a></li>
+                        <li class="list-group-item px-2">Personal Email: <a href="mailto:morganjohnjr@icloud.com">morganjohnjr@icloud.com</a>
                         </li>
                     </ul>
                 </div>
@@ -64,7 +64,29 @@
                     <div>
                         <h1 class="block-header row justify-content-around">My Projects</h1>
                     </div>
+                    <ul id="favorite">
+                        <h2 class="language">Favorites</h2>
+                        <li>
+                            <div>
+                                <a href="https://github.com/BaseCampCoding/bookstore"><h1>bookstore</h1></a>
+                                <p>A book store website where we finished the html in the templates</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/rental_store_johnmorgan"><h1>rental_store_johnmorgan</h1></a>
+                                <p>A rental store project made using python</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://github.com/johnmorgan2000/Gladiators-Classes"><h1>Gladiators-Dictionaries</h1></a>
+                                <p>A Gladiator game made in python using Classes</p>
+                            </div>
+                        </li>
 
+
+                    </ul>
                     <ul id="python">
                         <h2 class="language" d>Python</h2>
                         <li>
